--- a/Falldown/cocos/cocos2d/build.xml
+++ b/Falldown/cocos/cocos2d/build.xml
@@ -6,7 +6,7 @@
 
     <target name="compile_Canvas">
         <jscomp compilationLevel="simple" warning="quiet"
-                debug="false" output="../lib/Cocos2d-html5-v2.0.min.js">
+                debug="false" output="../lib/Cocos2d-html5-v2.1.min.js">
             <externs dir="${basedir}">
                 <file name="cocos2d_externs.js"/>
             </externs>
@@ -98,15 +98,15 @@
             </sources>
             <!-- extensions -->
             <sources dir="${basedir}/../extensions">
-                <file name="CCBReader/CCNodeLoaderLibrary.js"/>
                 <file name="CCBReader/CCBReaderUtil.js"/>
+                <file name="CCBReader/CCBValue.js"/>
+                <file name="CCBReader/CCBKeyframe.js"/>
+                <file name="CCBReader/CCBSequence.js"/>
                 <file name="CCBReader/CCNodeLoader.js"/>
                 <file name="CCBReader/CCBReader.js"/>
                 <file name="CCBReader/CCControlLoader.js"/>
                 <file name="CCBReader/CCSpriteLoader.js"/>
-                <file name="CCBReader/CCBValue.js"/>
-                <file name="CCBReader/CCBKeyframe.js"/>
-                <file name="CCBReader/CCBSequence.js"/>
+                <file name="CCBReader/CCNodeLoaderLibrary.js"/>
                 <file name="CCBReader/CCBRelativePositioning.js"/>
                 <file name="CCBReader/CCBAnimationManager.js"/>
                 <file name="GUI/CCControlExtension/CCControl.js"/>
@@ -121,8 +121,9 @@
                 <file name="GUI/CCControlExtension/CCControlSaturationBrightnessPicker.js"/>
                 <file name="GUI/CCControlExtension/CCMenuPassive.js"/>
                 <file name="GUI/CCScrollView/CCSorting.js"/>
-                <file name="GUI/CCScrollView/CCTableView.js"/>
                 <file name="GUI/CCScrollView/CCScrollView.js"/>
+                <file name="GUI/CCScrollView/CCTableView.js"/>
+                <file name="CCControlEditBox.js"/>
             </sources>
         </jscomp>
     </target>
