--- a/Falldown/cocos/cocos2d/build.xml
+++ b/Falldown/cocos/cocos2d/build.xml
@@ -6,14 +6,13 @@
 
     <target name="compile_Canvas">
         <jscomp compilationLevel="simple" warning="quiet"
-                debug="false" output="../lib/Cocos2d-html5-v2.1.min.js">
+                debug="false" output="../lib/Cocos2d-html5-v2.1.1.min.js">
             <externs dir="${basedir}">
                 <file name="cocos2d_externs.js"/>
             </externs>
             <sources dir="${basedir}">
                 <file name="platform/CCClass.js"/>
                 <file name="platform/CCCommon.js"/>
-                <file name="platform/platform.js"/>
                 <file name="platform/miniFramework.js"/>
                 <file name="platform/ZipUtils.js"/>
                 <file name="platform/base64.js"/>
@@ -21,12 +20,15 @@
                 <file name="platform/CCMacro.js"/>
                 <file name="platform/CCFileUtils.js"/>
                 <file name="platform/CCTypes.js"/>
+                <file name="platform/zlib.min.js"/>
                 <file name="cocoa/CCGeometry.js"/>
+                <file name="platform/Sys.js"/>
                 <file name="platform/CCConfig.js"/>
-                <file name="cocoa/CCSet.js"/>
                 <file name="cocoa/CCNS.js"/>
+                <file name="cocoa/CCSet.js"/>
                 <file name="cocoa/CCAffineTransform.js"/>
                 <file name="support/CCPointExtension.js"/>
+                <file name="support/CCUserDefault.js"/>
                 <file name="base_nodes/CCNode.js"/>
                 <file name="base_nodes/CCdomNode.js"/>
                 <file name="base_nodes/CCAtlasNode.js"/>
@@ -109,9 +111,9 @@
                 <file name="CCBReader/CCNodeLoaderLibrary.js"/>
                 <file name="CCBReader/CCBRelativePositioning.js"/>
                 <file name="CCBReader/CCBAnimationManager.js"/>
+                <file name="GUI/CCControlExtension/CCControlUtils.js"/>
                 <file name="GUI/CCControlExtension/CCControl.js"/>
                 <file name="GUI/CCControlExtension/CCControlButton.js"/>
-                <file name="GUI/CCControlExtension/CCControlUtils.js"/>
                 <file name="GUI/CCControlExtension/CCInvocation.js"/>
                 <file name="GUI/CCControlExtension/CCScale9Sprite.js"/>
                 <file name="GUI/CCControlExtension/CCControlSlider.js"/>
